# policy-gradient-implementations

./: .gitignore  .pylintrc  Pipfile  README.md  main.py  mypy.ini  pyproject.toml  replay_buffer.py  requirements.colab.txt  requirements.dev.txt  requirements.txt  utils.py
1-monte-carlo-prediction/: __main__.py
4-td-control/: digitiser.py
5-reinforce/: __main__.py
7-ddpg/: __main__.py  actor.py  agent.py  critic.py  noise.py
8-td3/: actor.py  agent.py  critic.py
9-sac/: actor.py  agent.py  critic.py  value.py
actor_critic/: __main__.py  agent.py
ddpg/: __main__.py  actor.py  agent.py
models/actor_critic_CartPole-v1/: hyperparameters.json
models/actor_critic_LunarLander-v2/: hyperparameters.json
models/ddpg_LunarLanderContinuous-v2/: hyperparameters.json
models/ppo_InvertedPendulumBulletEnv-v0/: hyperparameters.json
models/reinforce_CartPole-v1/: hyperparameters.json
models/reinforce_LunarLander-v2/: hyperparameters.json
models/sac_InvertedPendulumBulletEnv-v0/: hyperparameters.json
monte-carlo-prediction/: __main__.py  agent.py
monte_carlo_control/: __main__.py
notebooks/: Actor_Critic.ipynb  DDPG.ipynb  PPO.ipynb  REINFORCE.ipynb  SAC.ipynb  TD3.ipynb
policy_gradients/: __init__.py  __main__.py  core.py  main.py  parser.py  replay_buffer.py  runner.py  utils.py
reinforce/: __main__.py  agent.py
sac/: __main__.py
scripts/: generate_requirements.sh
td-control/: __main__.py  agent.py
td-prediction/: __main__.py
td3/: __main__.py  agent.py
td_control/: __main__.py
td_prediction/: __main__.py  agent.py
(+57 files in other folders)
