[tool.poetry]
name = "policy_gradients"
version = "0.0.0"
description = "Implementing reinforcement learning algorithms based on policy gradients."
authors = ["willclarktech <willclarktech@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
