[tool.poetry]
name = "policy_gradients"
version = "0.0.0"
description = "Implementing reinforcement learning algorithms based on policy gradients."
authors = ["willclarktech <willclarktech@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/willclarktech/policy-gradient-implementations/"

[tool.poetry.dependencies]
python = ">= 3.6.2, < 3.9.0"
gym = {extras = ["box2d"], version = "^0.18.0"}
matplotlib = "^3.3.4"
pybullet = "^3.0.8"
torch = "^1.7.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.800"
jupyter = "^1.0.0"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
